--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,1 +1,19 @@
 <h1>Edit Post</h1>
+
+<%= form_for @post do |f| %>
+    <p>
+      <%= f.label :title %><br/>
+      <%= f.text_field :title %><br/>
+    </p>
+    <p>
+      <%= f.label :body %><br/>
+      <%= f.text_area :body %><br/>
+    </p>
+    <p>
+      <%= f.select :category_id , Category.all.collect {|x|[x.name,x.id]},{:include_blank =>"Select One"} %><br/>
+    </p>
+    <p>
+      <%= f.submit "Update Post" %>
+    </p>
+    <%= link_to "Go Back" , posts_path%>
+<% end %>
