--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Blog Posts</h1>
-<h3>Sample Post one</h3>
-<p>This is some sample text for our Ruby <%= @content_first %></p>
-<hr>
-<h3>Sample Post two</h3>
-<p>This is some sample text for our Ruby Blog</p>
+<% @posts.each do |post| %>
+    <h3><%= link_to post.title,post %></h3>
+    <p> <%= post.body %></p>
+    <hr>
+    <%= link_to "Add new Post", new_post_path %>
+
+<% end %>
