--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<h3><%= @category.name %></h3>
+<% if @posts.each do |post| %>
+<h3><%= link_to post.title, post %></h3>
+    <p><%= post.body %></p>
+<% end.empty? %>
+    <p>Sorry, there are no posts in this category</p>
+<% end %>
+    <h3><%= link_to "Back to Categories" , categories_path %></h3>
